# fastapi-oauth

./: .gitignore  README.md  test.db
app/: app.py  users.py
backend/: demo.env  main.py  pyproject.toml
backend/app/: app.py  config.py  crud_user.py  db.py  main.py  users.py
backend/app/auth/: __init__.py  auth_backend.py  auth_transport.py  oauth_client.py  token_strategy.py  user_manager.py  user_setup.py
backend/app/routes/: auth.py  main.py  users.py
backend/tests/: conftest.py
backend/tests/e2e/: test_authenticated_route.py
backend/tests/repositories/: test_user_repository.py
backend/tests/routes/: test_authenticated_route.py
frontend/: README.md  biome.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Auth.jsx  api.js  auth.js  authClient.js  main.jsx  token.js
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/client/core/: request.ts
frontend/src/pages/: Home.jsx  Login.jsx  OAuthCallback.jsx
