[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" },
]

dependencies = [
  "fastapi",
  "fastapi-users[oauth,sqlalchemy]",
  "uvicorn[standard]",
  "aiosqlite",
  "pydantic-settings>=2.3",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "pytest-asyncio<0.22,>=0.21.1",
    "ruff<1.0.0,>=0.2.2",
]